--- a/EnlightenMobile.UITests/EnlightenMobile.UITests.csproj
+++ b/EnlightenMobile.UITests/EnlightenMobile.UITests.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>EnlightenMobile.UITests</RootNamespace>
     <AssemblyName>EnlightenMobile.UITests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ReleaseVersion>0.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
