--- a/EnlightenMobile.iOS/Info.plist
+++ b/EnlightenMobile.iOS/Info.plist
@@ -23,7 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>EnlightenMobile</string>
+	<string>Enlighten</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.wasatchphotonics.EnlightenMobile</string>
 	<key>CFBundleVersion</key>
@@ -34,24 +34,16 @@
 	<string>EnlightenMobile</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
-    <key>UIBackgroundModes</key>
-    <array>
-        <!--for connecting to devices (client)-->
-        <string>bluetooth-central</string>
-
-        <!--for server configurations if needed-->
-        <string>bluetooth-peripheral</string>
-    </array>
-
-    <!--Description of the Bluetooth request message (required on iOS 10, deprecated)-->
-    <key>NSBluetoothPeripheralUsageDescription</key>
-    <string>App needs BLE to control spectrometer</string>
-
-    <!--Description of the Bluetooth request message (required on iOS 13)-->
-    <key>NSBluetoothAlwaysUsageDescription</key>
-    <string>App needs BLE to control spectrometer</string>
-
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>App needs Location access to use BLE</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+	</array>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>App needs BLE to control spectrometer</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>App needs BLE to control spectrometer</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App needs Location access to use BLE</string>
 </dict>
 </plist>
