--- a/EnlightenMobile/EnlightenMobile.csproj
+++ b/EnlightenMobile/EnlightenMobile.csproj
@@ -18,5 +18,6 @@
     <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
     <PackageReference Include="Plugin.BLE" Version="2.1.1" />
     <PackageReference Include="Microcharts.Forms" Version="0.7.1" />
+    <PackageReference Include="Steema.TeeChart.NET.STD.Xamarin.Forms" Version="4.2020.3.11" />
   </ItemGroup>
 </Project>
