--- a/EnlightenMobile/EnlightenMobile.csproj
+++ b/EnlightenMobile/EnlightenMobile.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.2" />
     <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
     <PackageReference Include="Plugin.BLE" Version="2.1.1" />
-    <PackageReference Include="Telerik.UI.for.Xamarin.Chart.Trial" Version="2020.1.318.1" />
+    <PackageReference Include="Telerik.UI.for.Xamarin" Version="2020.1.318.1" />
+    <PackageReference Include="Telerik.UI.for.Xamarin.Chart" Version="2020.1.318.1" />
   </ItemGroup>
 </Project>
