--- a/EnlightenMobile.Android/Properties/AndroidManifest.xml
+++ b/EnlightenMobile.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.wasatchphotonics.enlightenmobile">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.wasatchphotonics.enlightenmobile" android:versionCode="1" android:versionName="0.3.16">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="EnlightenMobile.Android"></application>
+	<application android:label="EnlightenMobile.Android" android:icon="@mipmap/icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
