setup iOS and Android Permission, add QR button, setup initial scanner

--- a/EnlightenMobile.Android/EnlightenMobile.Android.csproj
+++ b/EnlightenMobile.Android/EnlightenMobile.Android.csproj
@@ -70,6 +70,12 @@
     <PackageReference Include="Telerik.UI.for.Xamarin.Primitives">
       <Version>2021.1.224.1</Version>
     </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile">
+      <Version>2.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile.Forms">
+      <Version>2.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -150,4 +156,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties TriggeredFromHotReload="False" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
