--- a/EnlightenMobile.iOS/EnlightenMobile.iOS.csproj
+++ b/EnlightenMobile.iOS/EnlightenMobile.iOS.csproj
@@ -254,6 +254,12 @@
     <PackageReference Include="Telerik.UI.for.Xamarin.Primitives">
       <Version>2021.1.224.1</Version>
     </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile">
+      <Version>2.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile.Forms">
+      <Version>2.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
