--- a/EnlightenMobile/EnlightenMobile.csproj
+++ b/EnlightenMobile/EnlightenMobile.csproj
@@ -21,5 +21,7 @@
     <PackageReference Include="Plugin.BLE" Version="2.1.1" />
     <PackageReference Include="Telerik.UI.for.Xamarin" Version="2021.1.224.1" />
     <PackageReference Include="Telerik.UI.for.Xamarin.Chart" Version="2021.1.224.1" />
+    <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
+    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
   </ItemGroup>
 </Project>
