iOS permisson, add QR result to CSV data

--- a/EnlightenMobile.iOS/Info.plist
+++ b/EnlightenMobile.iOS/Info.plist
@@ -50,5 +50,7 @@
 	<true/>
 	<key>UIFileSharingEnabled</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Barcode scanner requires camera.</string>
 </dict>
 </plist>
