--- a/EnlightenMobile.Android/EnlightenMobile.Android.csproj
+++ b/EnlightenMobile.Android/EnlightenMobile.Android.csproj
@@ -118,7 +118,7 @@
       <Generator>
       </Generator>
     </AndroidResource>
-    <AndroidResource Include="Resources\drawable\tab_app_settings.png">
+    <AndroidResource Include="Resources\drawable\tab_settings.png">
       <SubType>
       </SubType>
       <Generator>
