--- a/EnlightenMobile.Android/EnlightenMobile.Android.csproj
+++ b/EnlightenMobile.Android/EnlightenMobile.Android.csproj
@@ -158,6 +158,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\tab_device.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\thumb.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
