--- a/EnlightenMobile/EnlightenMobile.csproj
+++ b/EnlightenMobile/EnlightenMobile.csproj
@@ -38,7 +38,7 @@
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
 		<!-- Images -->
-		<MauiImage Include="Resources\UI\*" />
+		<MauiImage Include="Resources\Images\*" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -56,5 +56,7 @@
 	    <DependentUpon>DevicePage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
+
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionEnlightenMobileHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
